CSS::Sass (3.6.3)

  Maintenance release including some build fixes.
  Includes one other fix for libsass to fix source-map and
  error positions in case utf8 is used in sass/scss files.

  * Bumped libsass version to virtual 3.6.4-r1
  * Fix plugin resolving on older DragonFly BSD

-- Marcel Greter <perl-libsass@ocbnet.ch>  Mon, 4 May 2020 11:56:27 +0100

CSS::Sass (3.6.2)

  Updating libsass to version 3.6.4
  https://github.com/sass/libsass/releases/tag/3.6.4

  * Bumped libsass version to latest 3.6 stable branch (3.6.4)
  * CPAN release for 3.6.1 was skipped due to regressions
  * GCC 4.4 support was removed for now (might not come back)

-- Marcel Greter <perl-libsass@ocbnet.ch>  Thu, 1 May 2020 13:46:07 +0100

CSS::Sass (3.6.1)

  Updating libsass to version 3.6.3
  Improves extend compatibility with dart-sass
  https://github.com/sass/libsass/releases/tag/3.6.3

  * Bumped libsass version to latest 3.6 stable branch (3.6.3)
  * Fixed issue with building plugins on Mac OSX (#41)
  * Updated sass-spec and adjusted spec runner

-- Marcel Greter <perl-libsass@ocbnet.ch>  Mon, 4 Nov 2019 12:00:00 +0200

CSS::Sass (3.6.0)

  First release with next major libsass version
  This may cause your existing sass code to break
  Please check the libsass changelog for breaking changes
  https://github.com/sass/libsass/releases/tag/3.6.0

  * Bumped libsass version to latest 3.6 stable branch (3.6.0)
  * Added digest plugin to compute md5/base64/crc checksums
  * Adjusted a few test cases to match new 3.6 behaviors

-- Marcel Greter <perl-libsass@ocbnet.ch>  Thu, 19 May 2019 17:49:32 +0100

CSS::Sass (3.4.13)

  * Fix build failures when using clang
  * Fix detection of installed modules

-- Marcel Greter <perl-libsass@ocbnet.ch>  Thu, 11 Apr 2019 22:14:04 +0100

CSS::Sass (3.4.12)

  * Maintenance release (no libsass upgrade)
  * Add unit tests for included plugins
  * Changed plugin locations and auto loading
  * Implement support for HRX spec tests