@@ -68,5 +68,5 @@
          "url" : "https://github.com/sass/perl-libsass"
       }
    },
-   "version" : "v3.6.3"
+   "version" : "v3.6.4"
 }
