@@ -24,7 +24,7 @@ use warnings;
 
 ################################################################################
 package CSS::Sass::Plugins;
-our $VERSION = "3.6.3";
+our $VERSION = "3.6.4";
 ################################################################################
 # collect plugins
 our %plugins;
