@@ -1,3 +1,12 @@
+CSS::Sass (3.6.4)
+
+  Maintenance release including a MacOSx build fix.
+
+  * Bumped libsass version to virtual 3.6.5
+  * Fix MacOS linker not understanding z-origin
+
+-- Marcel Greter <perl-libsass@ocbnet.ch>  Mon, 21 May 2020 03:33:30 +0100
+
 CSS::Sass (3.6.3)
 
   Maintenance release including some build fixes.
